fix gap & pckg.json

--- a/src/components/book/style.module.css
+++ b/src/components/book/style.module.css
@@ -26,7 +26,6 @@
 .hashtags {
     display: flex;
     flex-wrap: wrap;
-    gap: 16px;
     align-items: baseline;
 }
 
